# store-manage

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package.json
data/: README.md  accounts.txt  customers.txt  employees.txt  inventory.txt  product_storefront.json  products.txt  vouchers.txt
data/demo/: accounts.json  orders.json  products.json  vouchers.json
docs/: BaoCao_Suon_FashionStoreSystem.docx  GioiThieuDeTai_FashionStoreSystem.md  architecture_overview.md
rule/: 00-project-scope-and-architecture.md  01-project-structure.md  02-dependency-direction.md  03-domain-modeling-rules.md  04-cpp-coding-style.md  05-naming-convention.md  06-class-contract.md  07-function-contract.md  08-error-handling.md  09-memory-and-ownership.md  10-header-and-include-policy.md  11-interface-and-polymorphism.md  12-domain-boundaries.md  13-application-service-rules.md
scripts/: build-gpp.ps1  build-gpp.sh  smoke-api.sh  sync-demo-data.js  test-gpp.ps1  test-gpp.sh  update_report_docx.py
src/: main.cpp  server.hpp
src/api/: fashion_store_api.hpp
src/application/admin/: account_management_service.hpp
src/application/cart/: cart_application_service.hpp
src/application/catalog/: catalog_application_service.hpp
src/application/customer/: customer_application_service.hpp
src/application/identity/: auth_application_service.hpp
src/application/notification/: notification_application_service.hpp
src/application/order/: order_application_service.hpp
src/application/payment/: payment_application_service.hpp
src/application/report/: report_application_service.hpp
src/application/returns/: returns_application_service.hpp
src/application/review/: review_application_service.hpp
src/application/shipping/: shipping_application_service.hpp
src/application/staff/: return_management_service.hpp  store_management_service.hpp
src/domain/cart/: cart.cpp  cart.hpp  cart_repository.hpp
src/domain/catalog/: product.cpp  product.hpp  product_repository.hpp
src/domain/customer/: customer.cpp  customer.hpp
src/domain/identity/: access_control.hpp  account.cpp  account.hpp
src/domain/inventory/: inventory_item.cpp  inventory_item.hpp  inventory_repository.hpp
src/domain/notification/: notification.hpp
src/domain/order/: order.cpp  order.hpp  order_repository.hpp
src/domain/payment/: payment.hpp
src/domain/pricing/: voucher.cpp  voucher.hpp  voucher_repository.hpp
src/domain/returns/: return_policy.hpp  return_request.hpp
src/domain/review/: review.hpp  review_policy.hpp
src/domain/shared/: types.hpp
src/domain/shipping/: shipment.hpp
src/domain/staff/: employee.hpp
src/infrastructure/: demo_loader.cpp  demo_loader.hpp
src/infrastructure/persistence/file/: file_repositories.cpp  file_repositories.hpp  file_store.cpp  file_store.hpp
src/infrastructure/persistence/in_memory/: in_memory_repositories.hpp
tests/: api_facade_smoke.cpp  auth_roles_smoke.cpp  core_smoke.cpp  file_persistence_smoke.cpp  order_consistency_smoke.cpp  payment_smoke.cpp  report_smoke.cpp  return_management_smoke.cpp  review_return_guards_smoke.cpp  shipping_smoke.cpp  staff_catalog_management_smoke.cpp
web/: admin.html  admin.js  api-client.js  cart.html  cart.js  index.html  login.html  login.js  orders.html  orders.js  payment.html  payment.js  product.html  product.js  session-shell.js  staff.html  staff.js  storefront-data.js  storefront-state.js  styles.css  wishlist.html
web/assets/css/: admin-staff.css  base.css  cart-payment.css  home.css  login.css  product.css  styles.css
web/assets/js/: admin.js  api-client.js  cart.js  config.js  index.js  login.js  payment.js  product.js  session-shell.js  staff.js  storefront-data.js  storefront-state.js  wishlist.js
